# CE49X-Spring25

book1_python_handbook/: 00-Introduction.ipynb  01-How-to-Run-Python-Code.ipynb  07-Control-Flow-Statements.ipynb  08-Defining-Functions.ipynb
labs/final_project/: README.md  main.py  pyproject.toml  requirements.txt
labs/final_project/data/raw/: impact_factors.json  sample_data.csv
labs/final_project/lca_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
labs/final_project/notebooks/: lca_analysis_example.ipynb  lca_analysis_final.ipynb
labs/final_project/notebooks/results/: total_impact_results.csv
labs/final_project/results/: LCA_outputs.xlsx  summary_scores.csv  total_impact_results.csv
labs/final_project/src/: calculations.py  data_input.py  utils.py  visualization.py
labs/final_project/tests/: test_calculations.py  test_data_input.py  test_visualization.py
labs/lab2/: lab2.ipynb  lab2_soil_analysis.ipynb  lab2_soil_analysis.py
labs/lab3/: lab3.md  lab3_era5_analysis.ipynb  lab3_era5_analysis.py
labs/lab4/: lab4_matplotlib_exercises.ipynb  lab4_matplotlib_exercises.py
labs/lab5/: lab5.md  lab5.py
labs/lab6/: construction_documents.json  generate_construction_dataset.py  lab6.md  lab6.py
labs/midterm/: midterm.ipynb  midterm.py  midterm.question3.py  midterm.question4.py  midterm.question5.py  midterm.question6.py  midterm_question2.py
