[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final_project"
version = "0.1.0"
description = "Life Cycle Analysis (LCA) tool for CE49X project"
authors = [{name = "YunusEmre"}]

packages = ["src"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "seaborn", "pandas"]
