[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lca_tool"
version = "0.1.0"
description = "Life Cycle Assessment tool"
authors = [{name = "Yunus Emre"}]

[tool.setuptools]

packages = ["src"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "seaborn", "pandas"]
